# snowbinary

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md  deny.toml  justfile  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  checks.yml  release.yml  rust.yml
crates/snowbinary_c/: Cargo.toml
crates/snowbinary_c/src/: lib.rs  writer.rs
src/: error.rs  lib.rs  reader.rs  tests.rs  writer.rs
