[package]
name = "snowbinary"
version = "0.3.0"
authors = ["harmless-tech"]
edition = "2021"
description = "A header based system for writing and reading binary files using its own format."
readme = "README.md"
repository = "https://github.com/harmless-tech/snowbinary"
license = "MIT"
keywords = ["file"]
exclude = [".github/*", "rustfmt.toml", "target/*", ".gitignore", "Cargo.lock", "justfile"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.3"
thiserror = "1.0.38"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
