[package]
name = "snowbinary"
version = "0.3.1"
authors = ["harmless-tech"]
edition = "2021"
description = "A header based system for writing and reading binary files using its own format."
readme = "README.md"
repository = "https://github.com/harmless-tech/snowbinary"
license = "MIT"
keywords = ["file"]
rust-version = "1.66"
include = [
    "src/",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.5.0"
thiserror = "1.0.50"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
