[package]
name = "snowbinary"
version = "0.4.0"
authors = ["harmless-tech"]
edition = "2021"
description = "A header based system for writing and reading binary files using its own format"
readme = "README.md"
repository = "https://github.com/harmless-tech/snowbinary"
license = "MIT OR Apache-2.0"
keywords = ["file"]
categories = ["filesystem"]
rust-version = "1.66"
include = [
    "src/",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

[dependencies]
blake3 = "^1.5.1"

[features]
default = []

[lints.clippy]
cargo = "deny"
correctness = "deny"
complexity = "deny"
nursery = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"

[package.metadata.docs.rs]
all-features = true
