[package]
name = "snowbinary_c"
version = "0.1.0"
authors = ["harmless-tech"]
edition = "2018"
description = "A c wrapper for snowbinary."
readme = "../../README.md"
repository = "https://github.com/harmless-tech/snowbinary"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
snowbinary = { path = "../.." }
