[package]
name = "snowbinary_c"
version = "0.2.0"
authors = ["harmless-tech"]
edition = "2018"
description = "A c impl for snowbinary."
readme = "../../README.md"
repository = "https://github.com/harmless-tech/snowbinary"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
libc = "0.2.93"
seahash = "4.1.0" # The c library will always have seahash imported.

[features]
default = []
